# advent-of-code

./: .gitignore  README.md  Vagrantfile
advent_of_code/: README.md  pyproject.toml
advent_of_code/src/advent_of_code/: __init__.py  main.py
advent_of_code/src/advent_of_code/day_01/: __init__.py  cli.py  distance_metrics.py  metrics.py  utils.py
advent_of_code/src/advent_of_code/day_02/: __init__.py  cli.py  utils.py
advent_of_code/src/advent_of_code/day_03/: __init__.py  cli.py  utils.py
advent_of_code/src/advent_of_code/day_04/: __init__.py  cli.py  utils.py
advent_of_code/src/advent_of_code/day_05/: __init__.py  cli.py
advent_of_code/src/advent_of_code/day_06/: __init__.py  cli.py
advent_of_code/src/advent_of_code/day_07/: __init__.py  cli.py
advent_of_code/src/advent_of_code/day_08/: __init__.py  cli.py
advent_of_code/src/advent_of_code/day_09/: __init__.py  cli.py
advent_of_code/src/advent_of_code/day_10/: __init__.py  cli.py
advent_of_code/src/advent_of_code/day_11/: __init__.py  cli.py
advent_of_code/src/advent_of_code/day_12/: __init__.py  cli.py
advent_of_code/src/advent_of_code/day_13/: __init__.py  cli.py
advent_of_code/src/advent_of_code/day_14/: __init__.py  cli.py
advent_of_code/src/advent_of_code/day_15/: __init__.py  cli.py
advent_of_code/src/advent_of_code/day_16/: __init__.py  cli.py
advent_of_code/src/advent_of_code/day_17/: __init__.py  cli.py
advent_of_code/src/advent_of_code/day_18/: __init__.py  cli.py
advent_of_code/src/advent_of_code/day_19/: __init__.py  cli.py
advent_of_code/src/advent_of_code/day_20/: __init__.py  cli.py
advent_of_code/src/advent_of_code/day_21/: __init__.py  cli.py
advent_of_code/src/advent_of_code/day_22/: __init__.py  cli.py
advent_of_code/src/advent_of_code/day_23/: __init__.py  cli.py
advent_of_code/src/advent_of_code/day_24/: __init__.py  cli.py
advent_of_code/src/advent_of_code/day_25/: __init__.py  cli.py
advent_of_code/tests/unit/day_01/: test_distance_metrics.py  test_metrics.py  test_utils.py
advent_of_code/tests/unit/day_02/: test_utils.py
advent_of_code/tests/unit/day_03/: test_utils.py
docker/: Dockerfile
(+8 files in other folders)
