[project]
name = "advent_of_code"
version = "0.0.1"
description = "Solutions to Advent of Code 2024 Daily Challenges"
authors = [
    {name = "bryancquach",email = "bryancquach@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
url = "https://github.com/bryancquach/advent-of-code"
dependencies = [
]

[tool.poetry]
packages = [{include = "advent_of_code", from = "src"}]

[tool.autoflake]
check = true
imports = []

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
